--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -1,18 +1,27 @@
 @charset "utf-8";
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html,
 body {
-  background: #A1FDD6;
+  height: 100%;
   color: #333;
   text-align: center;
-  font-family: Georgia;
-  padding: 10rem 2rem;
+  font-family: "Avenir Next", "Avenir", "Helvetica Neue", helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 
-.container {
-  margin: 0 auto;
-  width: 20rem;
+.table {
+  display: table;
+  width: 100%;
+  height: 100%;
 }
 
-p {
-  color: #999;
+.cell {
+  display: table-cell;
+  vertical-align: middle;
 }
+
