Works in progress...

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,6 +1,13 @@
 ---
-title: A company about nothing, Simple Casual
+title: Simple Casual
 ---
 
 .container
   %h1 Simple Casual
+  %ul
+    In progress:
+    %li= link_to 'Dripstr', 'http://dripstr.com'
+    %li= link_to 'Hack Design', 'http://hackdesign.org'
+    %li= link_to 'Latte Up', 'http://latteup.com'
+    %li= link_to 'SquareFormat', 'http://squareformat.co'
+    %li= link_to 'Ruby.fm', 'http://ruby.fm'
