--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -9,3 +9,4 @@ title: Simple Casual
     %li= link_to 'Dripstr', 'http://dripstr.com'
     %li= link_to 'Latte Up', 'http://latteup.com'
     %li= link_to 'SquareFormat', 'http://squareformat.co'
+    %li= link_to 'Ruby.fm *BETA*', 'http://api.ruby.fm'
