Adds Cardless beta

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -5,8 +5,8 @@ title: Simple Casual
 .container
   %h1 Simple Casual
   %ul
-    In progress:
     %li= link_to 'Dripstr', 'http://dripstr.com'
     %li= link_to 'Latte Up', 'http://latteup.com'
     %li= link_to 'SquareFormat', 'http://squareformat.co'
-    %li= link_to 'Ruby.fm *BETA*', 'http://api.ruby.fm'
+    %li= link_to 'Ruby.fm', 'http://api.ruby.fm'
+    %li= link_to 'Cardless App *BETA*', 'http://cardlessapp.com'
