--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -3,7 +3,11 @@ title: Simple Casual
 ---
 
 .container
+  = image_tag("eames-chair.svg")
   %h1 Simple Casual
+  %p An <a href="https://github.com/simplecasual">open-ish</a> company, come <a href="https://simplecasual.slack.com/">hang out</a> or <a href="mailto:alexbaldwin@gmail.com">say hello</a>, we're always looking for <a href="https://github.com/search?q=user%3Asimplecasual&ref=searchresults&state=open&type=Issues&utf8=%E2%9C%93">help</a>.
+  <br>
+  %h3 Projects
   %ul
     %li= link_to 'Dripstr', 'http://dripstr.com'
     %li= link_to 'Latte Up', 'http://latteup.com'
