--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -6,11 +6,12 @@ title: Simple Casual
   = image_tag("eames-chair.svg")
   %h1 Simple Casual
   %p An <a href="https://github.com/simplecasual">open-ish</a> company, come <a href="https://simplecasual.slack.com/">hang out</a> or <a href="mailto:alexbaldwin@gmail.com">say hello</a>, we're always looking for <a href="https://github.com/search?q=user%3Asimplecasual&ref=searchresults&state=open&type=Issues&utf8=%E2%9C%93">help</a>.
-  <br>
-  %h3 Projects
+  %br
+  %br
+  %br
+  %h3 Our Projects
+  %br
   %ul
-    %li= link_to 'Dripstr', 'http://dripstr.com'
-    %li= link_to 'Latte Up', 'http://latteup.com'
-    %li= link_to 'SquareFormat', 'http://squareformat.co'
-    %li= link_to 'Ruby.fm', 'http://api.ruby.fm'
-    %li= link_to 'Cardless App *BETA*', 'http://cardlessapp.com'
+    %li= link_to '<strong>Dripstr</strong><br>Austin coffee guidebook', 'http://dripstr.com'
+    %li= link_to '<strong>Latte Up</strong><br>Morning report on your business', 'http://latteup.com'
+    %li= link_to '<strong>SquareFormat</strong><br>Discover Instagram photographers', 'http://squareformat.co'
