--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -12,6 +12,5 @@ title: Simple Casual
   %h3 Our Projects
   %br
   %ul
-    %li= link_to '<strong>Dripstr</strong><br>Austin coffee guidebook', 'http://dripstr.com'
-    %li= link_to '<strong>Latte Up</strong><br>Morning report on your business', 'http://latteup.com'
+    %li= link_to '<strong>Latte</strong><br>Coffee guidebook', 'http://latteup.com'
     %li= link_to '<strong>SquareFormat</strong><br>Discover Instagram photographers', 'http://squareformat.co'
